--- a/acceuilsae.html
+++ b/acceuilsae.html
@@ -24,7 +24,7 @@
         <!-- Le contenu sera généré dynamiquement par JavaScript -->
     </div>
     <script src="js/data.js"></script>
-    <script src="../js/sae_loading.js"></script>
+    <script src="js/sae_loading.js"></script>
 
 </body>
 </html>
