--- a/acceuilsae.html
+++ b/acceuilsae.html
@@ -11,10 +11,11 @@
 <body>
 
     <header>
-        <img src="assets/images/logoC.png" alt="Logo gauche">
+        <img src="assets/images/logoC.png" alt="Logo gauche" class="logo-gauche">
         <div>
         <a href="index.html"><img src="assets/images/home.png" alt="Retour à l'accueil"></a>
         <a href="https://www.linkedin.com/in/cali-rosello-879909294/" target="_blank"><img src="assets/images/logo-linkedin.png" alt="Logo droit"></a>
+        <a href="https://github.com/CaliRosello" target="_blank"><img src="assets/images/github.png" alt="Logo droit"></a>
         </div>
     </header>
 
